prevent scrollbar from disappearing behind settings icon

--- a/src/components/header/settings/settings.css
+++ b/src/components/header/settings/settings.css
@@ -68,8 +68,9 @@
   /* position: absolute;
   top: 0;
   right: 0; */
+  padding: 0rem 1.5rem 2rem 1.5rem;
   z-index: 4;
-  height: 100vh;
+  height: 60vh;
   overflow-y: scroll;
   background-color: var(--light-blue);
   border-radius: 0 0 0 10%;
