--- a/src/features/customizeCategories/customizeCategories.css
+++ b/src/features/customizeCategories/customizeCategories.css
@@ -1,5 +1,4 @@
 #settings #customize-categories {
-  padding: 4rem 1.5rem 2rem 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
